--- a/src/components/forms/FbInput/index.scss
+++ b/src/components/forms/FbInput/index.scss
@@ -1,7 +1,7 @@
 @use "sass:color";
 @import "../../../assets/components/form/fb-input";
 
-.fb-form-input {
+.fb-theme-form-input {
   &__control {
     display: block;
     width: 100%;
