--- a/src/components/forms/FbTextArea/index.scss
+++ b/src/components/forms/FbTextArea/index.scss
@@ -1,7 +1,7 @@
 @use "sass:color";
 @import "../../../assets/components/form/fb-text-area";
 
-.fb-form-textarea {
+.fb-theme-form-textarea {
   &__control {
     display: block;
     width: 100%;
