--- a/src/components/layout/FbContent/index.scss
+++ b/src/components/layout/FbContent/index.scss
@@ -1,6 +1,6 @@
 @import "../../../assets/components/layout/fb-content";
 
-.fb-layout-content {
+.fb-theme-layout-content {
   &__container {
     height: 100%;
     overflow: hidden;
