--- a/src/components/layout/FbFooter/index.scss
+++ b/src/components/layout/FbFooter/index.scss
@@ -1,6 +1,6 @@
 @import "../../../assets/components/layout/fb-footer";
 
-.fb-layout-footer {
+.fb-theme-layout-footer {
   &__container {
     font-family: $footer-font-family;
     font-size: $footer-font-size;
