--- a/src/components/layout/FbHeader/Button/index.scss
+++ b/src/components/layout/FbHeader/Button/index.scss
@@ -1,6 +1,6 @@
 @import "../../../../assets/components/layout/fb-header";
 
-.fb-layout-header-button {
+.fb-theme-layout-header-button {
   &__container {
     display: block;
     background-color: transparent;
