--- a/src/components/layout/FbHeader/Spacer/index.scss
+++ b/src/components/layout/FbHeader/Spacer/index.scss
@@ -1,6 +1,6 @@
 @import "../../../../assets/components/layout/fb-header";
 
-.fb-layout-header {
+.fb-theme-layout-header {
   &__spacer {
     &-left,
     &-right {
