--- a/src/components/layout/FbNavigation/index.scss
+++ b/src/components/layout/FbNavigation/index.scss
@@ -1,6 +1,6 @@
 @import "../../../assets/components/layout/fb-navigation";
 
-.fb-layout-navigation {
+.fb-theme-layout-navigation {
   &__container {
     ul {
       list-style: none;
