--- a/src/components/layout/FbSidebar/index.scss
+++ b/src/components/layout/FbSidebar/index.scss
@@ -1,6 +1,6 @@
 @import "../../../assets/components/layout/fb-sidebar";
 
-.fb-layout-sidebar {
+.fb-theme-layout-sidebar {
   &__container {
     z-index: $z-index;
     width: 0;
