--- a/src/components/layout/FbSignBox/index.scss
+++ b/src/components/layout/FbSignBox/index.scss
@@ -1,6 +1,6 @@
 @import "../../../assets/components/layout/fb-sign-box";
 
-.fb-layout-sign-box {
+.fb-theme-layout-sign-box {
   &__container {
     animation-duration: 1s;
     animation-fill-mode: both;
