--- a/src/components/layout/FbTabs/Item/index.scss
+++ b/src/components/layout/FbTabs/Item/index.scss
@@ -1,6 +1,6 @@
 @import "../../../../assets/components/layout/fb-tabs";
 
-.fb-layout-tabs-item {
+.fb-theme-layout-tabs-item {
   &__container {
     flex-grow: 1;
 
