--- a/src/components/layout/FbTabs/index.scss
+++ b/src/components/layout/FbTabs/index.scss
@@ -1,6 +1,6 @@
 @import "../../../assets/components/layout/fb-tabs";
 
-.fb-layout-tabs {
+.fb-theme-layout-tabs {
   &__container {
     color: $navigation-color;
     height: 6rem;
