--- a/src/components/layout/FbUserMenu/index.scss
+++ b/src/components/layout/FbUserMenu/index.scss
@@ -1,6 +1,6 @@
 @import "../../../assets/components/layout/fb-user-menu";
 
-.fb-layout-user-menu {
+.fb-theme-layout-user-menu {
   &__container {
     position: relative;
 
