--- a/src/components/ui/FbAlert/index.scss
+++ b/src/components/ui/FbAlert/index.scss
@@ -1,6 +1,6 @@
 @import "../../../assets/components/ui/fb-alert";
 
-.fb-ui-alert {
+.fb-theme-ui-alert {
   &__container {
     font-family: $alert-font-family;
     position: relative;
