--- a/src/components/ui/FbCardBox/index.scss
+++ b/src/components/ui/FbCardBox/index.scss
@@ -1,6 +1,6 @@
 @import "../../../assets/components/ui/fb-card-box";
 
-.fb-ui-card {
+.fb-theme-ui-card {
   &__container {
     font-family: $card-font-family;
     border: none;
