--- a/src/components/ui/FbContent/index.scss
+++ b/src/components/ui/FbContent/index.scss
@@ -1,6 +1,6 @@
 @import "../../../assets/components/ui/fb-content";
 
-.fb-ui-content {
+.fb-theme-ui-content {
   /* Margin from top */
   &-mt {
     &-lg {
