--- a/src/components/ui/FbItemsContainer/index.scss
+++ b/src/components/ui/FbItemsContainer/index.scss
@@ -1,6 +1,6 @@
 @import "../../../assets/components/ui/fb-items-container";
 
-.fb-ui-items-container {
+.fb-theme-ui-items-container {
   &__container {
     font-family: $container-font-family;
     margin: $container-margin;
