--- a/src/components/ui/FbMediaItem/index.scss
+++ b/src/components/ui/FbMediaItem/index.scss
@@ -1,6 +1,6 @@
 @import "../../../assets/components/ui/fb-media-item";
 
-.fb-ui-media-item {
+.fb-theme-ui-media-item {
   &__container {
     font-family: $media-font-family;
     font-size: $media-font-size;
