--- a/src/components/forms/FbCheckboxes/index.scss
+++ b/src/components/forms/FbCheckboxes/index.scss
@@ -1,6 +1,6 @@
 @import "../../../assets/components/form/fb-checkboxes";
 
-.fb-form-checkboxes {
+.fb-theme-form-checkboxes {
   &__control {
     padding: $checkboxes-margin;
   }
