--- a/src/components/forms/FbRadioButtons/index.scss
+++ b/src/components/forms/FbRadioButtons/index.scss
@@ -1,6 +1,6 @@
 @import "../../../assets/components/form/fb-radio-buttons";
 
-.fb-form-radio-buttons {
+.fb-theme-form-radio-buttons {
   &__control {
     padding: $radio-group-margin;
   }
