--- a/src/components/forms/FbSelect/index.scss
+++ b/src/components/forms/FbSelect/index.scss
@@ -1,7 +1,7 @@
 @use "sass:color";
 @import "../../../assets/components/form/fb-select";
 
-.fb-form-select {
+.fb-theme-form-select {
   &__control {
     display: block;
     width: 100%;
