--- a/src/components/layout/FbHeader/Icon/index.scss
+++ b/src/components/layout/FbHeader/Icon/index.scss
@@ -1,6 +1,6 @@
 @import "../../../../assets/components/layout/fb-header";
 
-.fb-layout-header-icon {
+.fb-theme-layout-header-icon {
   &__container {
     display: block;
     background-color: transparent;
