--- a/src/components/layout/FbSignFooter/index.scss
+++ b/src/components/layout/FbSignFooter/index.scss
@@ -1,6 +1,6 @@
 @import "../../../assets/components/layout/fb-sign-footer";
 
-.fb-layout-sign-footer {
+.fb-theme-layout-sign-footer {
   &__container {
     margin: $footer-margin;
     text-align: center;
