--- a/src/components/ui/FbNoResults/index.scss
+++ b/src/components/ui/FbNoResults/index.scss
@@ -1,6 +1,6 @@
 @import "../../../assets/components/ui/fb-no-results";
 
-.fb-ui-no-results {
+.fb-theme-ui-no-results {
   &__container {
     font-family: $no-results-font-family;
     font-size: $no-results-font-size;
