--- a/src/components/ui/FbResultOk/index.scss
+++ b/src/components/ui/FbResultOk/index.scss
@@ -1,6 +1,6 @@
 @import "../../../assets/components/ui/fb-result-ok";
 
-.fb-ui-result-ok {
+.fb-theme-ui-result-ok {
   &__container {
     width: $result-icon-width;
     display: block;
@@ -23,13 +23,13 @@
       }
 
       circle {
-        animation: fb-ui-result-ok-dash 0.9s ease-in-out;
+        animation: fb-theme-ui-result-ok-dash 0.9s ease-in-out;
       }
 
       polyline {
         stroke-dashoffset: -100;
         stroke-linecap: round;
-        animation: fb-ui-result-ok-dash-check 0.9s 0.35s ease-in-out forwards;
+        animation: fb-theme-ui-result-ok-dash-check 0.9s 0.35s ease-in-out forwards;
       }
     }
   }
@@ -39,7 +39,7 @@
   }
 }
 
-@keyframes fb-ui-result-ok-dash {
+@keyframes fb-theme-ui-result-ok-dash {
   0% {
     stroke-dashoffset: 1000;
   }
@@ -49,7 +49,7 @@
   }
 }
 
-@keyframes fb-ui-result-ok-dash-check {
+@keyframes fb-theme-ui-result-ok-dash-check {
   0% {
     stroke-dashoffset: -100;
   }
