--- a/src/components/ui/FbSpinner/index.scss
+++ b/src/components/ui/FbSpinner/index.scss
@@ -1,7 +1,7 @@
 @use "sass:math";
 @import "../../../assets/components/ui/fb-spinner";
 
-.fb-ui-spinner {
+.fb-theme-ui-spinner {
   &__container {
     position: relative;
     display: inline-block;
@@ -19,7 +19,7 @@
     }
 
     &::after {
-      animation: fb-ui-spinner-animation 0.6s linear;
+      animation: fb-theme-ui-spinner-animation 0.6s linear;
       animation-iteration-count: infinite;
     }
 
@@ -90,7 +90,7 @@
   }
 }
 
-@keyframes fb-ui-spinner-animation {
+@keyframes fb-theme-ui-spinner-animation {
   from {
     transform: rotate(0deg);
   }
