--- a/src/components/forms/FbField/index.scss
+++ b/src/components/forms/FbField/index.scss
@@ -105,7 +105,7 @@
         text-align: center;
         pointer-events: none;
 
-        svg {
+        :deep(svg) {
           fill: $field-error-color;
         }
       }
