--- a/src/components/layout/FbUserMenu/index.scss
+++ b/src/components/layout/FbUserMenu/index.scss
@@ -88,7 +88,7 @@
           border-radius: 50%;
         }
 
-        svg {
+        :deep(svg) {
           width: 3.6rem;
           height: 3.6rem;
           fill: $avatar-color;
