--- a/src/components/ui/FbResultErr/index.scss
+++ b/src/components/ui/FbResultErr/index.scss
@@ -7,7 +7,7 @@
     margin: 0 auto;
     text-align: center;
 
-    svg {
+    :deep(svg) {
       width: 100%;
       display: block;
       margin: 0;
