Next deep fixes

--- a/src/components/forms/FbField/index.scss
+++ b/src/components/forms/FbField/index.scss
@@ -80,13 +80,13 @@
         position: relative;
 
         &-left-addon {
-          .fb-theme-form-input__control {
+          :deep(.fb-theme-form-input__control) {
             @include field-remove-left-border-radius;
           }
         }
 
         &-right-addon {
-          .fb-theme-form-input__control {
+          :deep(.fb-theme-form-input__control) {
             @include field-remove-right-border-radius;
           }
         }
