--- a/src/components/ui/FbModalForm/index.scss
+++ b/src/components/ui/FbModalForm/index.scss
@@ -21,21 +21,21 @@
     align-items: center;
     z-index: $result-z-index;
 
-    .fb-theme-ui-spinner__container {
+    :deep(.fb-theme-ui-spinner__container) {
       width: 10rem;
       height: 10rem;
     }
 
-    .fb-theme-ui-spinner__container::before,
-    .fb-theme-ui-spinner__container::after {
+    :deep(.fb-theme-ui-spinner__container::before),
+    :deep(.fb-theme-ui-spinner__container::after) {
       width: 10rem;
       height: 10rem;
       margin: -5rem 0 0 -5rem;
       border-width: 4px;
     }
 
-    .fb-theme-ui-result-ok__container,
-    .fb-theme-ui-result-err__container {
+    :deep(.fb-theme-ui-result-ok__container),
+    :deep(.fb-theme-ui-result-err__container) {
       width: 10rem;
       height: 10rem;
     }
