--- a/src/components/layout/FbPhoneMenu/index.scss
+++ b/src/components/layout/FbPhoneMenu/index.scss
@@ -37,7 +37,7 @@
   &__footer {
     margin-top: $inner-padding;
 
-    .fb-theme-ui-button {
+    :deep(.fb-theme-ui-button) {
       text-align: center;
       background: $button-background-color;
 
