--- a/src/components/layout/FbUserMenu/Item/index.scss
+++ b/src/components/layout/FbUserMenu/Item/index.scss
@@ -12,8 +12,8 @@
       text-align: left;
     }
 
-    > a,
-    > button {
+    > :deep(a),
+    > :deep(button) {
       background-color: transparent;
       background-image: none;
       padding: $menu-item-padding;
@@ -26,6 +26,7 @@
       white-space: nowrap;
       width: 100%;
       text-align: left;
+      cursor: pointer;
 
       &:hover,
       &:focus {
