--- a/src/components/ui/FbModalHeader/index.scss
+++ b/src/components/ui/FbModalHeader/index.scss
@@ -169,7 +169,7 @@
               color: $header-color;
               text-decoration: none;
 
-              :deep(svg) {
+              svg {
                 color: $header-color;
               }
             }
