--- a/src/components/layout/FbUserMenu/index.scss
+++ b/src/components/layout/FbUserMenu/index.scss
@@ -84,7 +84,7 @@
         border-radius: 50%;
         padding: 0.2rem;
 
-        img {
+        :deep(img) {
           border-radius: 50%;
         }
 
