--- a/src/components/layout/FbContent/index.scss
+++ b/src/components/layout/FbContent/index.scss
@@ -21,4 +21,52 @@
   &__footer {
     z-index: $z-index;
   }
+
+  &__items {
+    @media (min-width: $screen-tablet-min) {
+      border-right: $items-border;
+
+      @include flex-box-width(38rem);
+
+      @media (max-width: $screen-tablet-max) {
+        @include flex-box-width(28rem);
+      }
+    }
+
+    height: 100%;
+
+    @include flex-column(nowrap);
+
+    &-search {
+      padding: $search-padding;
+      border-bottom: $search-border;
+      background-color: $search-background;
+    }
+
+    &-content {
+      min-height: 0; /* IMPORTANT: you need this for non-chrome browsers */
+      max-height: 100%;
+      height: 100%;
+      overflow-y: auto;
+      -ms-overflow-style: none; /* Internet Explorer 10+ */
+      scrollbar-width: none; /* Firefox */
+
+      @include flex-column;
+
+      &::-webkit-scrollbar {
+        display: none; /* Safari and Chrome */
+      }
+    }
+  }
+
+  &__preview {
+    -webkit-box-flex: 0;
+    flex: 4 0 0;
+    min-height: 0; /* IMPORTANT: you need this for non-chrome browsers */
+    max-height: 100%;
+    height: 100%;
+    overflow: auto;
+
+    @include flex-column(nowrap);
+  }
 }
