--- a/src/assets/components/layout/fb-content.scss
+++ b/src/assets/components/layout/fb-content.scss
@@ -1,5 +1,6 @@
 @import "../../variables/colors";
 @import "../../variables/screen";
+@import "../../variables/layout";
 @import "../../mixins/utilities";
 
 $z-index: 1030 !default;
