--- a/src/assets/components/layout/fb-content.scss
+++ b/src/assets/components/layout/fb-content.scss
@@ -1,6 +1,15 @@
+@import "../../variables/colors";
+@import "../../variables/screen";
+@import "../../variables/layout";
 @import "../../mixins/utilities";
 
 $z-index: 1030 !default;
+$items-border: 1px solid $gray-lighter;
+$search-padding: $padding-sm;
+$search-border: 1px solid $gray-lighter;
+$search-background: $bg-color-content;
+$screen-tablet-min: $screen-sm-min;
+$screen-tablet-max: $screen-sm-max;
 
 @mixin flex-content {
   @include flex-column(nowrap);
