--- a/src/assets/components/ui/fb-item.scss
+++ b/src/assets/components/ui/fb-item.scss
@@ -1,5 +1,6 @@
 @import "../../variables/colors";
 @import "../../variables/screen";
+@import "../../variables/layout";
 @import "../../variables/texts";
 @import "../../mixins/utilities";
 
